feat: 新增基础部署路径

--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
             progress.style.display = 'block';
             
             const xhr = new XMLHttpRequest();
-            xhr.open('POST', '/compress', true);
+            xhr.open('POST', '/lottie-mini/compress', true);
             
             xhr.upload.onprogress = function(e) {
                 if (e.lengthComputable) {
