fix:修复压缩后json多出冗余字段的问题

--- a/public/index.html
+++ b/public/index.html
@@ -252,6 +252,7 @@
                 }
             });
         function loadAnimation(jsonData) {
+            jsonData = JSON.parse(JSON.stringify(jsonData));
             if (animation) {
                 animation.destroy();
             }
